<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="llbean.myapplication.ui.MainActivity">

        <Button
            android:id="@id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_activity"/>

        <Button
            android:id="@id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recycler_activity"/>

        <Button
            android:id="@id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pager_activity"/>

        <Button
            android:id="@id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drawer_activity"/>

        <Button
            android:id="@id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animations"/>


    </LinearLayout>


</ScrollView>


